# pylendar

./: .gitignore  CLAUDE.md  Justfile  LICENSE  README.md  REVIEW.md  TODO.md  pyproject.toml
.github/workflows/: python-publish.yml  release.yml  tests.yml
docs/: LICENSE  TODO.md  debian_calendar.1.md  freebsd_calendar.1.md  macos_calendar.1.md  manpage_comparison.md  netbsd_calendar.1.md  openbsd_calendar.1.md  pylendar.1.md
src/pylendar/: pylendar.py
test/: __init__.py  conftest.py  test_ahead_behind.py  test_astronomical.py  test_coverage_gaps.py  test_cpp.py  test_date_formats_e2e.py  test_date_sorting_e2e.py  test_directives.py  test_find_calendar.py  test_friday_weekend_flags.py  test_include_paths.py  test_init.py  test_longitude_utc.py  test_parse_today.py  test_weekday_flag.py  test_weekday_relative.py
typings/: astronomy.pyi
typings/lunardate/: __init__.pyi
