[project]
name = "pylendar"
version = "0.4.0"
description = "Python port of the calendar reminder utility commonly found on BSD-style systems, which displays upcoming relevant dates."
readme = "README.md"
urls.source = "https://github.com/harkabeeparolus/pylendar"
authors = [
    { name = "Fredrik Mellström", email = "11281108+harkabeeparolus@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "astronomy-engine>=2.1.19",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
pylendar = "pylendar:main"
calendar = "pylendar:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=3.3.7",
    "pytest>=6.0",
    "ty>=0.0.17",
    "types-python-dateutil>=2.9.0.20260124",
]

# Linting configuration

[tool.ruff.lint]
flake8-annotations.ignore-fully-untyped = true
per-file-ignores."test_*.py" = [
    "S101",    # Use of assert detected (normal in tests)
    "PLR2004", # Magic value used in comparison (acceptable in tests)
    "PLW2901", # Redefining name from outer scope (pytest fixtures)
]
select = ["ALL"]
ignore = [
    "COM812", # flake8-commas (COM): missing-trailing-comma
    "D203",   # pydocstyle (D): incorrect-blank-line-before-class
    "D213",   # pydocstyle (D): multi-line-summary-second-line
    "T20",    # flake8-print (T20)
    "DTZ",    # flake8-datetimez (DTZ)
    "G004",   # flake8-logging-format (G): logging-f-string
]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = "astronomy"
ignore_missing_imports = true

[tool.pylint]
main.py-version = "3.11"
main.jobs = 0                       # 0 means all available cores
reports.output-format = "colorized"

[tool.pylint."messages control"]
disable = ["logging-fstring-interpolation", "logging-format-interpolation"]
enable = ["useless-suppression"]
